# vstbridge

./: .gitmodules  CLAUDE.md  IMPLEMENTATION_STATUS.md  README.md  meson.build  meson_options.txt  wine.cross
plans/: architecture-comparison.md  implementation-plan-v2.md  vst3bridge-implementation-plan.md
src/chainloader/: vst3_chainloader.cpp
src/common/: gui_events.cpp  gui_events.h  istream_impl.h  logger.cpp  logger.h  protocol.cpp  protocol.h  shared_memory.cpp  shared_memory.h  socket.cpp  socket.h  stream.cpp  stream.h
src/native/: audio_shm.cpp  audio_shm.h  gui_handler.cpp  gui_handler.h  ipc_client.cpp  ipc_client.h  plugin_factory.cpp  plugin_factory.h  plugin_proxy.cpp  plugin_proxy.h  socket_client.cpp  vst3_entry.cpp  vst3_plugin.cpp  vst3_plugin.h  x11_capture.cpp  x11_capture.h  x11_window.cpp  x11_window.h
src/vst3-sdk/: funknown.h  iaudioprocessor.h  ibstream.h  icomponent.h  ieditcontroller.h  ieventlist.h  iparameterchanges.h  ipluginbase.h  ipluginfactory.h  iplugview.h  istream.h  vst3sdk.h
src/wine-host/: audio_processor.cpp  audio_processor.h  audio_shm_host.cpp  audio_shm_host.h  component_handler.cpp  component_handler.h  gdi_capture.cpp  gdi_capture.h  gui_event_receiver.cpp  gui_event_receiver.h  host_application.cpp  host_application.h  host_main.cpp  ipc_host.cpp  ipc_host.h  parameter_changes.cpp  parameter_changes.h  plugin_instance.cpp  plugin_instance.h  socket_server.cpp  socket_server.h  vst3_host.cpp  vst3_host.h  window_manager.cpp  window_manager.h
vst3bridge/: PLAN.md  meson.build  meson_options.txt
vst3bridge/src/common/: meson.build  protocol.h  shared_memory.cpp  shared_memory.h  socket.cpp  socket.h
vst3bridge/src/native/: audio_shm.cpp  meson.build  plugin_factory.cpp  socket_client.cpp  vst3_entry.cpp  vst3_plugin.cpp  x11_capture.cpp  x11_window.cpp
vst3bridge/src/wine-host/: audio_shm_host.cpp  gdi_capture.cpp  host_main.cpp  meson.build  plugin_instance.cpp  socket_server.cpp  vst3_host.cpp  window_manager.cpp
vstbridge/: install.sh  package.sh  uninstall.sh
vstbridge/tools/vstbridgectl/src/: files.cpp
vstbridge/tools/vstbridgectl/src/gui/: app_window.cpp  app_window.h
yabridge-5.1.1/src/plugin/bridges/vst3-impls/: plug-view-proxy.cpp  plug-view-proxy.h
yabridge-5.1.1/src/wine-host/: editor.cpp
yabridge-5.1.1/tools/yabridgectl/: Makefile  install.sh  yabridgectl-gtk.desktop
yabridge-5.1.1/tools/yabridgectl/src/: actions.cpp  actions.h  config.cpp  config.h  files.cpp  files.h  gui_main.cpp  main.cpp  symbols.cpp  symbols.h  types.h  util.cpp  util.h  vst3_moduleinfo.cpp  vst3_moduleinfo.h
yabridge-5.1.1/tools/yabridgectl/src/actions/: blacklist.cpp  blacklist.h
yabridge-5.1.1/tools/yabridgectl/src/gui/: app_window.cpp  app_window.h
