option(
    'bitbridge',
    type : 'boolean',
    value : true,
    description : 'Build a 32-bit host application for hosting 32-bit plugins.'
)

option(
    'vst3-sdk',
    type : 'string',
    value : '',
    description : 'Path to the VST3 SDK directory. If not provided, will try to use system VST3 headers or download a copy.'
)

option(
    'system-vst3',
    type : 'boolean',
    value : false,
    description : 'Use system VST3 headers instead of bundled SDK.'
)