# Native Linux plugin sources

native_sources = files(
    'vst3_plugin.cpp',
    'vst3_entry.cpp',
    'x11_window.cpp',
    'x11_capture.cpp',
    'socket_client.cpp',
    'audio_shm.cpp',
    'plugin_factory.cpp',
)

# Native-specific include directories
native_includes = include_directories('.')
