# Wine host executable sources

wine_sources = files(
    'host_main.cpp',
    'vst3_host.cpp',
    'window_manager.cpp',
    'gdi_capture.cpp',
    'socket_server.cpp',
    'audio_shm_host.cpp',
    'plugin_instance.cpp',
)

# Wine-specific include directories
wine_includes = include_directories('.')
